# ansible-role-tripleo-barbican

./: .gitreview  README.md  ansible.cfg  setup.cfg  tox.ini
meta/: main.yml
